--- a/compose.yaml
+++ b/compose.yaml
@@ -1,36 +1,38 @@
 version: '3.8'
 
 services:
-  api:
-    container_name: nestjs
-    image: nestjs-dev
-    restart: unless-stopped
-    build:
-      context: .
-      dockerfile: Dockerfile
-      # ✨ Target the dev stage
-      target: dev
-    # Mount host directory to docker container to support watch mode
-    volumes:
-      - .:/app
-      # This ensures that the NestJS container manages the node_modules folder
-      # rather than synchronizes it with the host machine
-      - /app/node_modules
-    env_file:
-      - .env
-    ports:
-      - 3000:3000
-    networks:
-      - nest
-    depends_on:
-      - db
-    command: npx nest start --watch
+  # api:
+  #   container_name: nestjs
+  #   image: nestjs-dev
+  #   restart: unless-stopped
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile
+  #     # ✨ Target the dev stage
+  #     target: dev
+  #   # Mount host directory to docker container to support watch mode
+  #   volumes:
+  #     - .:/app
+  #     # This ensures that the NestJS container manages the node_modules folder
+  #     # rather than synchronizes it with the host machine
+  #     - /app/node_modules
+  #   env_file:
+  #     - docker.env
+  #   ports:
+  #     - {API_PORT}:{API_PORT}
+  #   networks:
+  #     - nest
+  #   depends_on:
+  #     - db
+  #   command: npx nest start --watch
 
   db:
     container_name: mysql_db
     image: mysql:8.0
     ports:
       - "${DB_PORT}:3306"
+    env_file:
+      - docker.env  # Reference docker.env file for environment variables
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       MYSQL_DATABASE: ${DATABASE_NAME}
