--- a/compose.yaml
+++ b/compose.yaml
@@ -30,7 +30,7 @@ services:
     container_name: mysql_db
     image: mysql:8.0
     ports:
-      - "${DB_PORT}:3306"
+      - "${DB_PORT}:${DB_PORT}"
     env_file:
       - docker.env  # Reference docker.env file for environment variables
     environment:
